#25 - plugin system - cleanups and classes rearranging